@@ -145,6 +145,14 @@ ARCHDIR=$VAR_DIR/arch
 
 QCOW_FORMAT="qcow2"
 
+################ ---- DRLM QCOW IMAGE SIZE
+# 
+# Virtual image size, not real, of qcow files where backups are stored.
+#
+########
+
+QCOW_VIRTUAL_SIZE="10T"
+
 ################ ---- DRLM DATA BACKEND TYPES
 #
 # Defines the location of data files, database connection|schema|user|...
@@ -361,7 +369,7 @@ URL_REAR_UBUNTU18_64="http://download.opensuse.org/repositories/Archiving:/Backu
 URL_REAR_UBUNTU19_64="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/xUbuntu_19.04/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_UBUNTU20_64="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/xUbuntu_20.04/amd64/rear_2.6-0_amd64.deb"
 
-# CENTOS/REDHAT Packages
+# CENTOS/REDHAT/ROCKY Packages
 #
 URL_REAR_REDHAT6_32="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/CentOS_CentOS-6/i686/rear-2.4-1.el6.i686.rpm"
 URL_REAR_REDHAT6_64="http://download.opensuse.org/repositories/Archiving:/Backup:/Rear/CentOS_CentOS-6/x86_64/rear-2.4-1.el6.x86_64.rpm"
@@ -431,7 +439,7 @@ REAR_SERVICES_UBUNTU16="rpcbind"
 REAR_SERVICES_UBUNTU18="rpcbind"
 REAR_SERVICES_UBUNTU20="rpcbind"
 
-# CENTOS/REDHAT Services
+# CENTOS/REDHAT/ROCKY Services
 REAR_SERVICES_REDHAT5="portmap nfs"
 REAR_SERVICES_REDHAT6="rpcbind nfs"
 REAR_SERVIVES_REDHAT7="rpcbind"
